--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 <body>
   <div id="cesiumContainer"></div>
-  <script src="js/app.js"></script>
+  <script src="src/js/app.js"></script>
   <div id="cesiumContainer"></div>
   <div id="cameraSettings" style="position: absolute; top: 10px; left: 10px; background: rgba(255, 255, 255, 0.8); padding: 10px; z-index: 1000;">
     Paramètres de la caméra: <br>
