--- a/index.html
+++ b/index.html
@@ -20,5 +20,14 @@
   <div id="cesiumContainer"></div>
   <script src="src/js/app.js"></script>
   <div id="cesiumContainer"></div>
+  <div id="toc" style="position: absolute; top: 10px; left: 10px; background: white; padding: 10px; z-index: 1000;">
+    <h3>Catalogue de couches</h3>
+    <label><input type="checkbox" id="toggleTopBoundary" checked>Plafond aérien</label><br>
+    <label><input type="checkbox" id="toggleBuildings" checked>Bâtiments swisstopo</label><br>
+    <label><input type="checkbox" id="toggleBatimentsExistants" checked>Bâtiments existants</label><br>
+    <label><input type="checkbox" id="toggleNouveauxBatiments" checked>Nouveaux bâtiments</label><br>
+    <label><input type="checkbox" id="toggleDemolitions" checked>Démolitions</label><br>
+    <label><input type="checkbox" id="toggleVegetation" checked>Végétation swisstopo  </label><br>
+  </div>
 </body>
 </html>
